# quranBot

./: CMakeLists.txt  CMakeLists.txt~  compile_commands.json  myLove.txt
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build2/asio-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build2/asio-download/asio-download-prefix/tmp/: asio-download-gitclone.cmake  asio-download-gitupdate.cmake
build2/cpr-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build2/cpr-download/cpr-download-prefix/tmp/: cpr-download-gitclone.cmake  (+1 more)
build2/ext/json11/: CTestTestfile.cmake  Makefile  cmake_install.cmake  json11.pc
build2/ext/sleepy-discord/: Makefile  cmake_install.cmake
build2/websocketpp-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
data/Surahs/: Surah_103.json  Surah_106.json  Surah_108.json  Surah_109.json  Surah_111.json  Surah_114.json  Surah_17.json  Surah_19.json  Surah_2.json  Surah_25.json  Surah_26.json  Surah_29.json  Surah_30.json  Surah_31.json  Surah_32.json  Surah_33.json  Surah_35.json  Surah_37.json  Surah_38.json  Surah_40.json  Surah_41.json  Surah_42.json  Surah_44.json  Surah_45.json  Surah_46.json  Surah_48.json  Surah_49.json  Surah_5.json  Surah_50.json  Surah_51.json  Surah_53.json  Surah_54.json  Surah_56.json  Surah_57.json  Surah_6.json  Surah_61.json  Surah_62.json  Surah_65.json  Surah_7.json  Surah_72.json  (+14 more)
headers/: main.hpp  main.hpp~
src/: main.cpp  main.cpp~
src/commands/: ayat.cpp  ayat.cpp~  ayat.hpp  ayat.hpp~
(+4 files in other folders)
